# techunicorn-backend-assessment

./: Cargo.toml  README.md  database.db3
src/: api.rs  db.rs  main.rs  mock.json  schema.sql
