[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
rust-argon2 = "1.0.0"
derive_more = "0.99.17"

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled", "serde_json"]
